--- a/Views/Home/MainPage.cshtml
+++ b/Views/Home/MainPage.cshtml
@@ -127,17 +127,18 @@
         <div class="ProductsGrid">
             <div id="Wedding" class="Products">
                 <img src="https://thelane.com/wp-content/uploads/2023/08/DSC08928-scaled.jpg" width="300px">
-                <button>Weddings</button>
+                <button onclick="changePage('wedding')">Weddings</button>
 
             </div>
             <div id="Birthday" class="Products">
                 <img src="img/birthday_icon.jpg"
                      width="300px">
-                <button>Birthdays</button>
+                <button onclick="changePage('birthday')">Birthdays</button>
             </div>
 
         </div>
     </fieldset>
+    <script src="~/js/site.js"></script>
 </body>
 
                 >//src="https://cdn.larrywalshe.com/wp-content/uploads/2022/02/04153550/larry-walshe-luxury-kids-parties.jpg"
