birthday pages connected next job:: fix pictures of wedding items

--- a/Views/Home/Birthdays.cshtml
+++ b/Views/Home/Birthdays.cshtml
@@ -164,36 +164,43 @@
         <p>With our range of catroon themed birthday decorations and let the kids have a great time!</p>
     </div>
     <div class="BdProductsGrid">
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('minecraft')">
             <div class="Products  tables">
                 <img src="/Themes/minecraft.jpg"
                      width="300vw">
                 <p>Minecraft</p>
             </div>
         </div>
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('babyShark')">
             <div class="Products bd tables">
                 <img src="/Themes/babyshark.jpg"
                      width="300vw">
                 <p>Baby Shark</p>
             </div>
         </div>
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('cocomelon')">
             <div class="Products bd tables">
                 <img src="/Themes/cocomelon.jpg"
                      width="300vw">
                 <p>Cocomelon</p>
             </div>
         </div>
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('bluey')">
             <div class="Products bd tables">
                 <img src="/Themes/bluey.jpg"
                      width="300vmax">
                 <p>Bluey</p>
             </div>
         </div>
+        <div class="bdList" onclick="birthdayProduct('peppa')">
+            <div class="Products bd tables">
+                <img src="/Themes/peppapig.png"
+                     width="300vmax">
+                <p>Peppa pig</p>
+            </div>
+        </div>
 
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('spiderman')">
             <div class="Products bd tables">
                 <img src="/Themes/spiderman.jpg"
                      width="300vmax">
@@ -201,7 +208,7 @@
             </div>
         </div>
 
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('pony')">
             <div class="Products bd tables">
                 <img src="/Themes/pony.png"
                      width="300vmax">
@@ -209,7 +216,7 @@
             </div>
         </div>
 
-        <div class="bdList">
+        <div class="bdList" onclick="birthdayProduct('frozen')">
             <div class="Products bd tables">
                 <img src="/Themes/frozen.jpg"
                      width="300vmax">
