Added database context, fixed program cs. Added method to get all item type in javascript Seeded item types in database

--- a/Views/Wedding/floralBacklash.cshtml
+++ b/Views/Wedding/floralBacklash.cshtml
@@ -210,16 +210,22 @@
                 <p>-> Length : 150cm</p>
                 <p>-> Weight : 10kg</p>
             </div>
-            <div>
-                <h2><i><u>Pictures</u></i></h2>
-                <img src="../img/floralBack.webp" width="150px">
-                <img src="../img/floralBack.webp" width="150px">
-                <img src="../img/floralBack.webp" width="150px">
-                <img src="../img/floralBack.webp" width="150px">
-                <img src="../img/floralBack.webp" width="150px">
-            </div>
             <div><p>super idol</p></div>
         </fieldset>
+    </div>
+
+    <br>
+    <br>
+    <div class="weddingItem">
+
+        <div>
+            <h2><i><u>More Pictures</u></i></h2>
+            <img src="../img/floralBack.webp" width="150px">
+            <img src="../img/floralBack.webp" width="150px">
+            <img src="../img/floralBack.webp" width="150px">
+            <img src="../img/floralBack.webp" width="150px">
+            <img src="../img/floralBack.webp" width="150px">
+        </div>
     </div>
     <br>
     <hr>
