--- a/Views/Wedding/tablesChairs.cshtml
+++ b/Views/Wedding/tablesChairs.cshtml
@@ -219,16 +219,21 @@
                 <p>-> Length : 150cm</p>
                 <p>-> Weight : 10kg</p>
             </div>
-            <div>
-                <h2><i><u>Pictures</u></i></h2>
-                <img src="../img/table.jpg" width="150px">
-                <img src="../img/table.jpg" width="150px">
-                <img src="../img/table.jpg" width="150px">
-                <img src="../img/table.jpg" width="150px">
-                <img src="../img/table.jpg" width="150px">
-            </div>
             <div><p>super idol</p></div>
         </fieldset>
+    </div>
+
+    <br>
+    <br>
+    <div class="weddingItem">
+        <div>
+            <h2><i><u>More Pictures</u></i></h2>
+            <img src="../img/table.jpg" width="150px">
+            <img src="../img/table.jpg" width="150px">
+            <img src="../img/table.jpg" width="150px">
+            <img src="../img/table.jpg" width="150px">
+            <img src="../img/table.jpg" width="150px">
+        </div>
     </div>
     <br>
     <hr>
