--- a/Views/Home/checkout.cshtml
+++ b/Views/Home/checkout.cshtml
@@ -48,8 +48,8 @@
             </div>
             <hr>
             <div>
-                <p id="priceDiscount">Discount :</p>
-                <p> 0$</p>
+                <p >Discount :</p>
+                <p id="priceDiscount"> 0$</p>
             </div>
 
             <div>
