--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -20,3 +20,16 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.checkoutItem{
+    background-color :cornsilk;
+    border : 2px solid black;
+    padding: 10px;
+    display : flex;
+    gap: 20px;
+    margin-top: 10px;
+    margin-left: 10px;
+}
+    .checkoutItem img {
+        border: 5px solid #f2f9cd;
+    }
