--- a/Views/Home/checkout.cshtml
+++ b/Views/Home/checkout.cshtml
@@ -65,6 +65,12 @@
         <div>
             <button onclick="clearStorage()">Clear</button>
         </div>
+        <br />
+        <hr />
+        <br />
+        <div>
+            <div id="stripe"></div>
+        </div>
     </div>
     <script src="~/js/site.js"></script>
 </body>
