--- a/Views/Home/checkout.cshtml
+++ b/Views/Home/checkout.cshtml
@@ -30,7 +30,7 @@
     <link rel="stylesheet" href="~/css/site.css" />
     <script src="https://js.stripe.com/clover/stripe.js"></script>
     <script src="~/js/site.js"></script>
-    <script src="~/js/checkout.js"></script>
+    <script src="~/js/checkout.js?v1.12"></script>
 
     
 </head>
