Fixed form.js logic to handle multiple products in itemTypeCode, polymorphism

--- a/Views/Birthday/babyShark.cshtml
+++ b/Views/Birthday/babyShark.cshtml
@@ -265,7 +265,7 @@
             <form class="purchaseForm">
                 <div>
                     <label for="product">Select a product</label>
-                    <select name="product" id="product" required>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
                         <option value="bbs-dt-001">Dessert Table</option>
                     </select>
@@ -395,5 +395,5 @@
     </div>
 </div>
 @section Scripts {
-    <script src="~/js/forms.js"></script>
+    <script src="~/js/forms.js?v1.1"></script>
 }
