--- a/Views/Birthday/frozen.cshtml
+++ b/Views/Birthday/frozen.cshtml
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+﻿    <style>
         :root {
             --bdclr: rgb(255, 183, 5);
             --bdclr2: rgba(0, 59, 149);
@@ -202,8 +196,7 @@
                 font-size: 30px
             }
     </style>
-</head>
-<body class="mainPage BirthdayPage">
+<div class="mainPage BirthdayPage">
     <div class="header">
         <ul class="bannerList">
             <li>
@@ -262,32 +255,34 @@
                 </p>
             </div>
         </div>
-
+        <!-- Frozen Standing background -->
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="itemTypeCode">Select a product</label>
+                    <select name="itemTypeCode" id="itemTypeCode" required>
                         <option>-</option>
-                        <option value="BoardABC">Board A+B+C</option>
-                        <option value="BoardA">Board A</option>
-                        <option value="BoardB">Board B</option>
-                        <option value="BoardC">Board C</option>
-                        <option value="BoardAB">Board A+B</option>
-                        <option value="BoardAC">Board A+C</option>
-                        <option value="BoardBC">Board B+C</option>
+                        <option value='["frz-tb-001","frz-tb-002","frz-tb-003"]'>Frozen Theme Board (A+B+C)</option>
+                        <option value="frz-tb-001">Board A</option>
+                        <option value="frz-tb-002">Board B</option>
+                        <option value="frz-tb-003">Board C</option>
+                        <option value='["frz-tb-001","frz-tb-002"]'> w/o{} Board A+B</option>
+                        <option value='["frz-tb-001","frz-tb-003"]'> w/o ''Board A+C</option>
+                        <option value='["frz-tb-002","frz-tb-002"]'> only ',' Board B+C</option>
                     </select>
+                    <!-- Polymorphism : itemTypeCode can be a string or an array of strings. -->
+                    <!-- If itemTypeCode.isArray, itemTypeCode.foreach()-->
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="1" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" name="startDate" id="startDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <label for="startTime">Time : </label>
+                        <select name="starTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -297,9 +292,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" name="endDate" id="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -328,5 +323,7 @@
         </div>
 
     </div>
-</body>
-</html>
+</div>
+@section Scripts{
+    <script src="~/js/forms.js?v1.3"></script>
+}
