--- a/Views/Birthday/minecraft.cshtml
+++ b/Views/Birthday/minecraft.cshtml
@@ -1,10 +1,4 @@
-﻿<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <style>
+﻿    <style>
         :root {
             --bdclr: rgb(255, 183, 5);
             --bdclr2: rgba(0, 59, 149);
@@ -202,8 +196,7 @@
                 font-size: 30px
             }
     </style>
-</head>
-<body class="mainPage BirthdayPage">
+<div class="mainPage BirthdayPage">
     <div class="header">
         <ul class="bannerList">
             <li>
@@ -259,32 +252,34 @@
                 </p>
             </div>
         </div>
-
+        <!-- Minecraft Circle boards -->
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="itemTypeCode">Select a product</label>
+                    <select name="itemTypeCode" id="itemTypeCode" required>
                         <option>-</option>
-                        <option value="BoardABC">Board A+B+C</option>
-                        <option value="BoardA">Board A</option>
-                        <option value="BoardB">Board B</option>
-                        <option value="BoardC">Board C</option>
-                        <option value="BoardAB">Board A+B</option>
-                        <option value="BoardAC">Board A+C</option>
-                        <option value="BoardBC">Board B+C</option>
+                        <option value='["mc-cb-001","mc-cb-002","mc-cb-003"]'>Minecraft Circle Theme Board (A+B+C)</option>
+                        <option value="mc-cb-001">Board A</option>
+                        <option value="mc-cb-002">Board B</option>
+                        <option value="mc-cb-003">Board C</option>
+                        <option value='["mc-cb-001","mc-cb-002"]'> w/o{} Board A+B</option>
+                        <option value='["mc-cb-001","mc-cb-003"]'> w/o ''Board A+C</option>
+                        <option value='["mc-cb-002","mc-cb-002"]'> only ',' Board B+C</option>
                     </select>
+                    <!-- Polymorphism : itemTypeCode can be a string or an array of strings. -->
+                    <!-- If itemTypeCode.isArray, itemTypeCode.foreach()-->
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="1" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" name="startDate" id="startDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <label for="startTime">Time : </label>
+                        <select name="starTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -294,9 +289,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" name="endDate" id="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -339,25 +334,29 @@
             </div>
         </div>
 
+
+        <!-- Minecrate Dessert Table-->
+
+
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="DessertTablesMC">Dessert Table</option>
+                        <option value="mc-dt-001">Minecraft Dessert Table</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
                         <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <select name="rentalTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -367,9 +366,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -377,7 +376,7 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Check Availability">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
 
@@ -414,25 +413,28 @@
             </div>
         </div>
 
+        <!-- minecraft Theme Board -->
+
+
         <div class="purchase">
             <h2><b><u>Order Now!</u></b></h2>
             <hr>
             <form class="purchaseForm">
                 <div>
-                    <label for="table">Select a product</label>
-                    <select name="table&chair" id="table" required>
+                    <label for="product">Select a product</label>
+                    <select name="itemTypeCode" id="product" required>
                         <option>-</option>
-                        <option value="table">Minecraft Backdrop</option>
+                        <option value="mc-cb-001">Minecraft Theme Board</option>
                     </select>
                 </div>
-                <label for="tableCountName">Select Quantitiy : </label>
-                <input type="number" id="tableCount" name="tableCountName" min="1" max="1" placeholder="Quantity" required>
+                <label for="quantity">Select Quantitiy : </label>
+                <input type="number" id="quantity" name="quantity" min="1" max="90" placeholder="Quantity" required>
                 <div>
                     <label for="startDate">Start Date :</label>
-                    <input type="date" name="startDate" min="Now" required>
+                    <input type="date" id="startDate" name="startDate" required>
                     <div>
                         <label for="rentalTime">Time : </label>
-                        <select name="timeFrame" id="rentalTime" required>
+                        <select name="rentalTime" id="startTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -442,9 +444,9 @@
                 </div>
                 <div>
                     <label for="endDate">Return Date :</label>
-                    <input type="date" name="endDate" required>
+                    <input type="date" id="endDate" name="endDate" required>
                     <div>
-                        <label for="rentalTime">Time : </label><select name="timeFrame" id="rentalTime" required>
+                        <label for="endTime">Time : </label><select name="endTime" id="endTime" required>
                             <option>-</option>
                             <option value="Moring">Morning (7am-11am)</option>
                             <option value="Afternoon">Afternoon (11am-4pm)</option>
@@ -452,10 +454,9 @@
                         </select>
                     </div>
                 </div>
-                <input type="submit" value="Submit">
+                <button id="addToCartBtn">Add to Cart</button>
             </form>
         </div>
-    </div>
 
     <div class="weddingItem">
         <div>
@@ -473,5 +474,7 @@
         </div>
 
     </div>
-</body>
-</html>
+</div>
+@section Scripts{
+    <script src="~/js/forms.js"></script>
+}
